# my-dotfiles

./: Xresources  bookmarks-drake.html  colordiffrc  cvsrc  fdignore  gdbinit  gdbinit.py  gitconfig  gtkrc  gtkrc-2.0  hgrc  hgrc.local-drake  muttrc  muttrc-awakening  procmailrc  procmailrc-awakening  pylintrc  screenrc  synergy.conf  tcshrc  toprc  xmodmap-awakening  xmodmap-drake  xmodmap-google  xmodmap-vmware  xscreensaver-drake  xsession  zenv  zgoogle  zprofile  zshrc  zstreambase  zvmware
aptitude/: config
archive/: gtkrc-2.0  hgrc  tcshrc  xmodmap-streambase  zstreambase
archive/Eterm/: user.cfg
archive/icons/: RevRedux2.tar.bz2
archive/ion3/: cfg_ioncore.lua  cfg_modules.lua  cfg_sp.lua  cfg_statusbar.lua  statusd_ping.lua  statusd_wireless.lua
elinks/: elinks.conf
envs/: 6.828  adk  gae  mtrace  z3
fluxbox/: keys
gdb/: heapgraph.py  hex.py  power64.py  printall.py  qreg.py  tracei.py
icons/: default
ion3/: cfg_bindings.lua  cfg_ion.lua  cfg_ioncore.lua  cfg_ionws.lua  cfg_menus.lua  cfg_modules.lua  cfg_sp.lua  cfg_statusbar.lua  cfg_tiling.lua  flashhack.lua  look-awesome.lua  look.lua  look_thinkblue.lua  statusd_batacpi.lua  statusd_ping.lua  statusd_wireless.lua
mplayer/: config
muttrc-local-awakening/: aliases  mailbox  mailbox-mbox  save-hooks
muttrc-local-streambase/: aliases  mailbox
ssh/: authorized_keys  authorized_keys.defunct  config  unauthorized_keys
subversion/: config
xmonad/: xmonad.hs
xmonad/xmonad-aclements/: Makefile  xmonad-aclements.cabal
xmonad/xmonad-aclements/XMonad/Layout/: CairoTest.hs  DynamicColumns.hs  StackDistributed.hs  StackZoomed.hs  StackZoomed2.hs  TitleBarBuilder.hs
xmonad/xmonad-aclements/XMonad/Util/: Cairo.hs  DzenMux.hs
(+60 files in other folders)
